--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -131,6 +131,14 @@ body {
     border-style: none;
 }
 
+.portlet-body{
+    background-color: inherit;
+}
+
+.breadcrumb {
+    background-color: inherit;
+}
+
 footer{
     background-color: #2D2D2D;
     
