adding personal bar to theme

--- a/e-learning-theme/src/css/_custom.scss
+++ b/e-learning-theme/src/css/_custom.scss
@@ -133,6 +133,15 @@ body {
 
 .portlet-body{
     background-color: inherit;
+    color: white;
+}
+
+.portlet-user-personal-bar {
+    color: white;
+}
+
+.user-full-name {
+    color: white;
 }
 
 .breadcrumb {
